syntax = "proto3";

package hm.hm;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "hm/hm/params.proto";

option go_package = "hm/x/hm/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams   (MsgUpdateParams  ) returns (MsgUpdateParamsResponse  );
  rpc SubmitQuestion (MsgSubmitQuestion) returns (MsgSubmitQuestionResponse);
  rpc SubmitAnswer   (MsgSubmitAnswer  ) returns (MsgSubmitAnswerResponse  );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =               "authority";
  option           (amino.name) = "hm/x/hm/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgSubmitQuestion {
  option (cosmos.msg.v1.signer) = "creator";
  string creator  = 1;
  string qid      = 2;
  string question = 3;
}

message MsgSubmitQuestionResponse {}

message MsgSubmitAnswer {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  string qid     = 2;
  string player  = 3;
  string answer  = 4;
}

message MsgSubmitAnswerResponse {}

